Wed Mar 24 18:58:12 GMT 2004  Olly Betts <olly@survex.com>

	* perl/Logo-script.pl: The content type header is `Content-Type:' not
	  `Context:'!

Wed Mar 24 14:09:59 GMT 2004  Olly Betts <olly@survex.com>

	* AUTHORS: Documented sources taken from elsewhere.

Wed Mar 24 14:09:32 GMT 2004  Olly Betts <olly@survex.com>

	* perl/Entities.pm: Fixed typo in comment.

Wed Mar 24 13:41:33 GMT 2004  Olly Betts <olly@survex.com>

	* perl/00_README: Corrected the cat command in-line with the
	  Makefile.am fix from earlier today.

Wed Mar 24 13:38:59 GMT 2004  Olly Betts <olly@survex.com>

	* perl/Compare-script.pl: Whitespace tweaks.

Wed Mar 24 13:34:45 GMT 2004  Olly Betts <olly@survex.com>

	* perl/cvscompare-script.pl: Removed - it's an unused old version of 
	  Compare-script.pl.

Wed Mar 24 13:10:09 GMT 2004  Olly Betts <olly@survex.com>

	* perl/: Fixed warnings from perl -wc.

Wed Mar 24 12:41:44 GMT 2004  Olly Betts <olly@survex.com>

	* amir/CommitSearch.cgi,perl/: Removed \r from various perl scripts.

Wed Mar 24 11:58:34 GMT 2004  Olly Betts <olly@survex.com>

	* perl/Makefile.am: #! line wasn't been added to perl scripts
	  correctly.

Tue Mar 23 23:26:29 GMT 2004  Olly Betts <olly@survex.com>

	* db/,map/map.cpp,map/alignment/alignment.cpp,
	  map/alignment/alignment.hpp: Replaced uses of deprecated strstream.

Tue Mar 23 23:20:10 GMT 2004  Olly Betts <olly@localnet>

	* README: Added note on which debian packages to install to allow
	  cvssearch to be built.

Tue Mar 23 19:11:19 GMT 2004  Olly Betts <olly@localnet>

	* db/cvs_db.C: Minor tweaks.

Tue Mar 23 18:43:27 GMT 2004  Olly Betts <olly@localnet>

	* map/alignment/Makefile.am: -DINLINE does nothing - removed; use -W
	  as well as -Wall.

Tue Mar 23 18:43:01 GMT 2004  Olly Betts <olly@localnet>

	* configure.in: AM_PROG_LIBTOOL -> AC_PROG_LIBTOOL.

Tue Mar 23 18:38:51 GMT 2004  Olly Betts <olly@survex.com>

	* ChangeLog: Created from CVS checkin comments.
